--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Martin Caceres, <span style="color: #00e7ff;">Frontend React Developer</span></h1>
-							<p>Desarrollo web con tecnologías HTML, CSS, JavaScript, Bootstrap, JQuery, React Js y manejo de Git.</p>
+							<h1>Martin Caceres, <span style="color: #00e7ff;">Frontend Developer</span></h1>
+							<p>Desarrollo web con tecnologías HTML, CSS, JavaScript, Bootstrap, React Js y Git/GitHub.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Mis Proyectos</a></li>
 							</ul>
