--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 									<h2>Sed ipsum dolor</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="https://csb-gexyzg.netlify.app/" target='_blank' class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
