--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 									<h2>Feugiat consequat</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="https://csb-plzjtb.netlify.app/" target='_blank' class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -69,7 +69,7 @@
 									<h2>Ultricies aliquam</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="https://csb-okv4br.netlify.app/" target='_blank' class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
