--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/netflix-home.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/netflix_home.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Ultricies aliquam</h2>
