--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<a href="#" class="image"><img src="images/Tesla-clone.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
+									<h2>Tesla Home</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
 										<li><a href="https://csb-gexyzg.netlify.app/" target='_blank' class="button">Learn more</a></li>
@@ -54,7 +54,7 @@
 							<a href="#" class="image"><img src="images/cryptodata.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
+									<h2>Cryptodata</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
 										<li><a href="https://csb-plzjtb.netlify.app/" target='_blank' class="button">Learn more</a></li>
@@ -66,7 +66,7 @@
 							<a href="#" class="image"><img src="images/netflix_home.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
+									<h2>Netflix Home</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
 										<li><a href="https://csb-okv4br.netlify.app/" target='_blank' class="button">Learn more</a></li>
