--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Tesla Home</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>Clon hecho en React Js. Estilos aplicados mediante Styled Components.</p>
 									<ul class="actions">
 										<li><a href="https://csb-gexyzg.netlify.app/" target='_blank' class="button">Learn more</a></li>
 									</ul>
@@ -55,7 +55,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Cryptodata</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>App hecha con React Js. Peticiones a API mediante fetch.</p>
 									<ul class="actions">
 										<li><a href="https://csb-plzjtb.netlify.app/" target='_blank' class="button">Learn more</a></li>
 									</ul>
@@ -67,7 +67,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Netflix Home</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>Clon hecho con React Js.</p>
 									<ul class="actions">
 										<li><a href="https://csb-okv4br.netlify.app/" target='_blank' class="button">Learn more</a></li>
 									</ul>
