--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
-											USA</span>
+											<span>Buenos Aires />
+											Argentina />
+											</span>
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">martincaceres.dev@gmail.com</a>
+											<a href="mailto:martincaceres.dev@gmail.com">martincaceres.dev@gmail.com</a>
 										</li>
 										<li>
 											<h3>Teléfono</h3>
