--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
-											<span>Buenos Aires />
-											Argentina />
+											<span>Buenos Aires <br>
+											Argentina
 											</span>
 										</li>
 										<li>
