--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 							<h2>Contacto</h2>
 <!-- 							<p></p> -->
 							<div class="split style1">
-								<section>
+<!-- 								<section>
 									<form method="post" action="#">
 										<div class="fields">
 											<div class="field half">
@@ -102,7 +102,7 @@
 											<li><a href="" class="button submit">Enviar mensaje</a></li>
 										</ul>
 									</form>
-								</section>
+								</section> -->
 								<section>
 									<ul class="contact">
 										<li>
